--- a/projects/project1/styleA.css
+++ b/projects/project1/styleA.css
@@ -10,8 +10,8 @@
 .boxA {
   width: 100px;
   height: 100px;
-  border: 1px solid #687291;
-  color: #dfe1e7;
+  border-top: 1px solid #687291;
+  background-color: #dfe1e7;
   font: 40px Tahoma;
   text-align: center;
   margin-top: 10px;
@@ -20,8 +20,8 @@
 .boxB {
   width: 100px;
   height: 100px;
-  border: 1px solid #687291;
-  color: #eeeff2;
+  border-top: 1px solid #687291;
+  background-color: #eeeff2;
   font: 40px Tahoma;
   text-align: center;
   margin-top: 10px;
@@ -30,8 +30,8 @@
 .boxC {
   width: 100px;
   height: 100px;
-  border: 1px solid #687291;
-  color: #def1e7;
+  border-top: 1px solid #687291;
+  background-color: #dfe1e7;
   font: 40px Tahoma;
   text-align: center;
   margin-top: 10px;
@@ -40,8 +40,8 @@
 .boxD {
   width: 100px;
   height: 100px;
-  border: 1px solid #687291;
-  color: #eeeff2;
+  border-top: 1px solid #687291;
+  background-color: #eeeff2;
   font: 40px Tahoma;
   text-align: center;
   margin-top: 10px;
@@ -50,8 +50,8 @@
 .boxE {
   width: 100px;
   height: 100px;
-  border: 1px solid #687291;
-  color: #def1e7;
+  border-top: 1px solid #687291;
+  background-color: #dfe1e7;
   font: 40px Tahoma;
   text-align: center;
   margin-top: 10px;
@@ -61,7 +61,7 @@
   width: 100px;
   height: 100px;                                                            
   border: 4px solid black;
-  color: #eeeff2;
+  background-color:  #687291;
   font: 40px Tahoma;
   text-align: center;
   margin-top: 10px;
